data/diff_tests/wasmtime/call_UnreachableCodeExecution_3321.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\93\80\80\80\00\01\03\65\6e"
    "\76\0b\69\6e\76\61\6c\69\64\46\75\6e\63\00\00\03"
    "\82\80\80\80\00\01\01\0a\8d\80\80\80\00\01\87\80"
    "\80\80\00\00\41\05\10\00\00\0b"
  )
""
)